Fixed user put method
